better fix for toolbar

--- a/skins/default/markasjunk2.css
+++ b/skins/default/markasjunk2.css
@@ -1,25 +1,20 @@
 #messagetoolbar a.markasjunk2 {
-  background: url('junk_act.png') 0 0 no-repeat transparent;
-}
-
-#messagetoolbar a.markasjunk2Pas {
-  background: url('junk_pas.png') 0 0 no-repeat transparent;
+  background-image: url('mail_toolbar.gif');
+  background-position: -32px 0;
 }
 
 #messagetoolbar a.markasjunk2Sel {
-  background: url('junk_sel.png') 0 0 no-repeat transparent;
+  background-image: url('mail_toolbar.gif');
+  background-position: -32px -32px;
 }
 
 #messagetoolbar a.markasnotjunk2 {
-  background: url('notjunk_act.png') 0 0 no-repeat transparent;
-}
-
-#messagetoolbar a.markasnotjunk2Pas {
-  background: url('notjunk_pas.png') 0 0 no-repeat transparent;
+  background-image: url('mail_toolbar.gif');
 }
 
 #messagetoolbar a.markasnotjunk2Sel {
-  background: url('notjunk_sel.png') 0 0 no-repeat transparent;
+  background-image: url('mail_toolbar.gif');
+  background-position: 0 -32px;
 }
 
 #rcmContextMenu .markasjunk2 a, #markmessagemenu a.markasjunk2
