--- a/skins/classic/markasjunk2.css
+++ b/skins/classic/markasjunk2.css
@@ -33,20 +33,21 @@
 
 #rcmContextMenu .markasjunk2 a,
 #rcmContextMenu .markasnotjunk2 a,
-#markmessagemenu a.markasjunk2,
-#markmessagemenu a.markasnotjunk2
+ul.toolbarmenu li a.markasjunk2,
+ul.toolbarmenu li a.markasnotjunk2
 {
-  background-image: url(images/messageactions.png);
+  background-image: url(images/messageactions.png) !important;
+  background-repeat: no-repeat;
 }
 
 #rcmContextMenu .markasjunk2 a,
-#markmessagemenu a.markasjunk2
+ul.toolbarmenu li a.markasjunk2
 {
-  background-position: 7px -17px;
+  background-position: 6px -17px !important;
 }
 
 #rcmContextMenu .markasnotjunk2 a,
-#markmessagemenu a.markasnotjunk2
+ul.toolbarmenu li a.markasnotjunk2
 {
-  background-position: 7px 0;
+  background-position: 6px 0 !important;
 }
