small icon position fix in classic skin

--- a/skins/classic/markasjunk2.css
+++ b/skins/classic/markasjunk2.css
@@ -45,5 +45,5 @@ ul.toolbarmenu li a.markasjunk2
 
 ul.toolbarmenu li a.markasnotjunk2
 {
-  background-position: 6px 0 !important;
+  background-position: 6px 1px !important;
 }
