--- a/skins/elastic/markasjunk2.less
+++ b/skins/elastic/markasjunk2.less
@@ -2,7 +2,7 @@
  * MarkAsJunk2 plugin styles
  */
 
-@import (reference) "/skins/elastic/styles/fontawesome";
+@import (reference) "../../../../skins/elastic/styles/fontawesome";
 
 .toolbar a.button.markasjunk2::before,
 .toolbarmenu li a.markasjunk2::before {
