(Elastic) update spam icon

--- a/skins/elastic/markasjunk2.less
+++ b/skins/elastic/markasjunk2.less
@@ -6,7 +6,7 @@
 
 .toolbar a.button.markasjunk2::before,
 .toolbarmenu li a.markasjunk2::before {
-  content: @fa-var-recycle;
+  content: @fa-var-fire;
 }
 
 .toolbar a.button.markasnotjunk2::before,
